# pic-viewer

./: .gitignore  CMakeLists.txt  Output  Package  README.md  vcpkg.json
.github/workflows/: package.yml
assets/: app_icon.xpm  resources.qrc
scripts/: build.bat  build.sh  generate-app-icon.py  install-dev-env.bat  install-dev-env.ps1  install-dev-env.sh  run.bat  run.sh
src/app/: app_language.cpp  app_language.h  main.cpp  main_window.cpp  main_window.h
src/catalog/: image_catalog.cpp  image_catalog.h
src/core/: image_cache.cpp  image_cache.h  image_types.h  prefetch_scheduler.cpp  prefetch_scheduler.h  slide_show_controller.cpp  slide_show_controller.h
src/decoder/: image_decoder.cpp  image_decoder.h
src/viewer/: image_viewer_widget.cpp  image_viewer_widget.h
tests/: test_image_catalog.cpp  test_image_decoder.cpp  test_prefetch_scheduler.cpp  test_slide_show_controller.cpp
